--- a/assets/scss/index/pagination.scss
+++ b/assets/scss/index/pagination.scss
@@ -7,17 +7,18 @@
     align-items: center;
     justify-content: center;
     user-select: none;
+    list-style: none;
 
     li {
-      padding: 4px 6px;
-      margin: 8px;
+      padding: 6px 12px;
+      margin: 0 3px;
       transition: color 0.3s ease;
       font-weight: bolder;
       font: var(--base-font);
       font-weight: bolder;
+      color: var(--theme-text-primary);
 
       a {
-        color: var(--theme-text-primary);
         transition: transitions(color, 0.3s);
 
         &:hover {
@@ -25,8 +26,36 @@
         }
       }
 
-      span {
-        color: var(--theme-text-low);
+      .icon {
+        height: 1em;
+      }
+
+      &.active {
+        background-color: rgba(255, 255, 255, 0.1);
+        border-radius: 3px;
+      }
+
+      &.disabled {
+        opacity: 0.5;
+        cursor: not-allowed;
+      }
+    }
+
+    .ellipsis {
+      width: 2.6em;
+
+      .icon:last-child {
+        display: none;
+      }
+
+      &:hover {
+        .icon:first-child {
+          display: none;
+        }
+
+        .icon:last-child {
+          display: inline-block;
+        }
       }
     }
   }
