feat: 添加版权信息显示功能，优化卡片封面布局

--- a/layouts/partials/card/card-cover.html
+++ b/layouts/partials/card/card-cover.html
@@ -44,6 +44,11 @@
         </ul>
       {{- end -}}
     {{- end -}}
+    {{- if .Params.cover_author -}}
+      <div class="card-cover--copyright">
+        <a href="{{- .Params.cover_source | safeURL -}}" target="_blank">@{{- .Params.cover_author -}}</a>
+      </div>
+    {{- end -}}
   </div>
 
 </div>
