--- a/assets/scss/index/card.scss
+++ b/assets/scss/index/card.scss
@@ -1,6 +1,7 @@
 /** card common style */
 .card-container {
   position: relative;
+  isolation: isolate;
 
   &.img {
     padding: 0;
@@ -49,6 +50,14 @@
       opacity: 0.3;
       background-image: linear-gradient(234deg, #394245 0%, #000 100%);
     }
+  }
+
+  .card-cover--copyright {
+    position: absolute;
+    right: 1em;
+    bottom: 0.5em;
+    color: var(--theme-text-light);
+    mix-blend-mode: difference;
   }
 
   .card-text {
