--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -4,7 +4,10 @@
 <body>
     {{- partial "header.html" . -}}
     <main id="content">
-        {{- block "main" . -}}{{- end -}}
+        <div class="layout-block">
+            {{- block "main" . -}}{{- end -}}
+            {{- block "widget" . -}}{{- end -}}
+        </div>
     </main>
     {{- partial "footer.html" . -}}
     {{- partial "footer-script" . -}}
