feat: 更新卡片组件，优化标签显示，添加社交图标支持

--- a/assets/scss/index/footer.scss
+++ b/assets/scss/index/footer.scss
@@ -16,16 +16,10 @@
       width: 45px;
       height: 45px;
       padding: 10px;
+    }
 
-      &:hover .iconfont {
-        color: var(--theme-text-stress);
-      }
-
-      .iconfont {
-        color: var(--theme-text-low);
-        font-size: 24px;
-        transition: transitions(color, 0.3s);
-      }
+    svg {
+      opacity: 0.6;
     }
   }
 
