--- a/assets/scss/index/card.scss
+++ b/assets/scss/index/card.scss
@@ -79,7 +79,7 @@
     .card-text--tag {
       display: flex;
       flex-wrap: wrap;
-      margin-top: 18px;
+      margin-top: 12px;
       margin-left: -8px;
       margin-right: -8px;
 
@@ -87,13 +87,10 @@
         border-radius: 20px;
         padding: 4px 8px;
         transition: color 0.3s ease, background-color 0.3s ease;
+        display: flex;
 
-        &::before {
-          font-family: "iconfont" !important;
-          font-size: 14px;
-          font-style: normal;
-          -webkit-font-smoothing: antialiased;
-          -moz-osx-font-smoothing: grayscale;
+        svg {
+          width: 1em;
           margin-right: 4px;
         }
 
@@ -101,14 +98,6 @@
           color: var(--theme-text-active);
           background-color: #fff;
         }
-      }
-
-      &:first-of-type a::before {
-        content: "\e609";
-      }
-
-      &:last-of-type a::before {
-        content: "\e880";
       }
     }
   }
