feat: 优化卡片组件样式，添加过渡效果，增强用户体验

--- a/assets/scss/index/card.scss
+++ b/assets/scss/index/card.scss
@@ -9,6 +9,7 @@
     .card-cover {
       position: relative;
       overflow: hidden;
+      transition: 1s filter linear;
 
       >img {
         display: block;
@@ -103,17 +104,24 @@
   }
 }
 
-.article-item {
+.theme-dark {
   .card-container {
     .card-cover {
       filter: brightness(0.9) grayscale(0.2);
-      transition: filter 0.3s;
     }
 
     &:hover {
       .card-cover {
         filter: brightness(1.1) grayscale(0);
       }
+    }
+  }
+}
+
+.theme-light {
+  .card-container:hover {
+    .card-cover {
+      filter: brightness(0.9) grayscale(0.2);
     }
   }
 }
