feat: 为社交图标链接添加标题属性，增强可访问性

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -2,7 +2,7 @@
   {{- with .Site.Menus.social -}}
   <div class="social-icons">
     {{- range . -}}
-      <a class="soft-size--primary soft-style--box" href="{{- .URL | safeURL -}}" target="_blank" rel="noopener noreferrer">
+      <a class="soft-size--primary soft-style--box" href="{{- .URL | safeURL -}}" target="_blank" rel="noopener noreferrer" title="{{- .Name -}}">
         {{- index $.Site.Data.social .Identifier | safeHTML -}}
       </a>
     {{- end -}}
