--- a/layouts/single-baseof.html
+++ b/layouts/single-baseof.html
@@ -2,6 +2,9 @@
 <html>
 {{- partial "head.html" . -}}
 <body>
+  <div style="color: red; position: absolute; z-index: 10000;">
+    {{ .Kind }}
+  </div>
   {{- partial "header.html" . -}}
   <main id="content">
     <!-- {{ partial "card/card-banner.html" . }} -->
