--- a/assets/scss/index/markdown.scss
+++ b/assets/scss/index/markdown.scss
@@ -99,10 +99,24 @@
 }
 
 .markdown-body button {
-  border: none;
   color: var(--theme-text-primary);
   padding: 8px 16px;
   cursor: pointer;
+  border-radius: 0.5em;
+  border: 1px solid var(--theme-bg-primary);
+  transition: all 0.3s;
+  box-shadow:
+    6px 6px 12px var(--theme-bg-active1),
+    -6px -6px 12px var(--theme-bg-active2);
+
+  &:active {
+    color: #666;
+    box-shadow:
+      0px 0px 0px var(--theme-bg-active1),
+      0px 0px 0px var(--theme-bg-active2),
+      inset 4px 4px 12px var(--theme-bg-active1),
+      inset -4px -4px 12px var(--theme-bg-active2);
+  }
 }
 
 .markdown-body img {
@@ -837,9 +851,11 @@
   }
 }
 
-@media screen and (max-width: 767px) {
+@media #{$mq-mb} {
+
   .markdown-body h2,
   .markdown-body h3 {
+
     &::before,
     &::after {
       display: none;
@@ -1326,7 +1342,7 @@
   }
 }
 
-@media screen and (max-width: 767px) {
+@media #{$mq-mb} {
   .markdown-body blockquote.quote {
     &.poetry {
       padding-left: 3em;
