refactor: 优化短代码参数处理，提升可读性和一致性

--- a/layouts/_shortcodes/align.html
+++ b/layouts/_shortcodes/align.html
@@ -1,1 +1,3 @@
-<p style="text-align:{{ index .Params 0 }}">{{ index .Params 1 | markdownify }}</p>
+{{ $align := index .Params 0 | default "left" }}
+{{ $content := index .Params 1 | default .Inner | markdownify }}
+<p style="text-align:{{ $align | safeCSS }}">{{ $content }}</p>
